--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 body{
     overflow: hidden;
     background-color: rgb(189, 212, 231);
-    animation: shakebody linear 6s infinite;
+    /* animation: shakebody linear 6s infinite; */
 }
 
 .sky{
